# cuvis-ai-ui

./: .gitignore  .secrets.baseline  CHANGELOG.md  LICENSE  README.md  codecov.yml  cuvis-ai-ui.code-workspace  cuvis_ai_catalog.yaml  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  pypi-release.yml
cuvis_ai_ui/: main.py  main_window.py  plugin_settings.py
cuvis_ai_ui/adapters/: __init__.py  node_adapter.py  node_introspector.py  pipeline_serializer.py  port_helpers.py
cuvis_ai_ui/grpc/: client.py
cuvis_ai_ui/server/: __init__.py  manager.py
cuvis_ai_ui/settings/: __init__.py  common.py  connection.py  plugins.py
cuvis_ai_ui/widgets/: __init__.py  canvas_drop_target.py  connection_dialog.py  node_palette.py  pipeline_info_dialog.py  plugin_manager.py  property_editor.py  tag_filter.py  tag_search_filter.py
installer/: build.bat  convert_icon.py  cuvis_ai_core.spec  cuvis_ai_ui.iss  cuvis_ai_ui.spec  launcher.py  rthook_torch_stub.py  server_launcher.py
tests/: conftest.py
tests/integration/: test_grpc_integration.py  test_main_window.py  test_pipeline_load_save.py
tests/manual/: test_catalog_nodes.py  test_file_dialog_fix.py  test_pipeline_info.py  test_pipeline_serialization_validation.py
tests/unit/adapters/: test_node_adapter.py  test_node_introspector.py  test_pipeline_serializer.py  test_port_helpers.py
tests/unit/grpc/: test_client.py
tests/unit/server/: test_manager.py
tests/unit/settings/: test_connection.py  test_plugins.py
tests/unit/widgets/: test_connection_dialog.py  test_node_palette.py  test_pipeline_info_dialog.py  test_plugin_manager.py  test_property_editor.py  test_tag_filter.py  test_tag_search_filter.py
